--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -322,18 +322,18 @@ d m Year & h m s & \multicolumn{2}{c}{RA (ICRS) Dec} & C/A & P/A & v & D & R* & 
 \end{centering}
 \end{figure*}
 
-The ESA astrometry satellite GAIA \citep{deBruijne2012} catalogue is expected to be released in the end of 2016. The precise star positions to be derived by GAIA will render better predictions with the only source of error being the ephemeris. The work of \cite{GomesJunior2015} will be revised with the GAIA catalogue and the predictions from 2017 onwards will be better predicted. For a matter of precaution and preparations of campaigns, we publish stellar occultations with UCAC4 until 2017.
+The ESA astrometry satellite GAIA \citep{deBruijne2012} catalogue is expected to be released in the end of 2016. The precise star positions to be derived by GAIA will render better predictions with the only source of error being the ephemeris. The work of \cite{GomesJunior2015} will be revised with the GAIA catalogue and the predictions from 2017 onwards will be better. For that, we only publish stellar occultations with UCAC4 until 2017.
 
 
 \section{Occultation tests} \label{Sec: testes}
 
-Observe a stellar occultation by an irregular satellites demands a great effort. The shadow covers a very restricted area on Earth because the irregular satellites are small. So, before we start a large observational campaign, we tested some occultation predictions for larger objects, to assess the quality of the prediction.
+Observe a stellar occultation demands a great effort. And, in our case, the shadow covers a very restricted area on Earth because the irregular satellites are small. So, before we start a large observational campaign, we tested some occultation predictions for large targets, to assess the quality of the predictions.
 
-The tests consisted in observing the object and star to be occulted near the event when the two objects were present in the same field of view (FOV), preferably when the objects were close to each other. Thus, the relative positions between the two objects had minimal influence of the errors of the reference catalogue of stars used and possible field distortions \citep[and references therein]{Peng2008}. The offsets of the positions of the star and of the satellites were used to check the original predictions.
+The tests consisted in observing the object and star to be occulted near the event when the two objects were present in the same field of view (FOV), preferably when the objects were close to each other. Thus, the relative positions between the two objects had minimal influence of the errors of the reference catalogue of stars used and possible field distortions \citep[and references therein]{Peng2008}. The relative positions of the star and of the satellites were used to check the original predictions.
 
 Two occultation tests were performed, one by Himalia that occurred on March 3, 2015 and the second by Elara that occurred on March 30, 2015. For each event, four situations were considered: the first with the nominal positions of the star and the satellite to the predicted time; the second with the offset calculated as described in section \ref{Sec: Offset}; the third with star and satellite offsets from observations made a few days before the occultation when the two objects were separated (different FOV); and the fourth from observations made when the star and the satellite were close in the same FOV.
 
-Figure \ref{Fig: occ-Himalia}shows four zoomed in occultation maps corresponding to each of the four situations for Himalia.. The map \ref{Fig: occ-Himalia-nooff} is the nominal prediction with the coordinate of the star given by the catalogue and that of the satellite from the ephemeris. We then corrected the positions of the satellite by an offset calculated by the method showed in section \ref{Sec: Offset} to make the map \ref{Fig: occ-Himalia-ajuste}. The map \ref{Fig: occ-Himalia-off22fev} was made from obtained positions on February 22 observed with the Zeiss telescope (Diameter = 0.6m; FOV = $12\farcm6$; pixel scale = $0\farcs37 / px$) at the Observatório do Pico dos Dias (OPD, IAU code 874, 45\degr 34\arcmin 57\arcsec W, 22\degr 32\arcmin 04\arcsec S, 1864m). On that day, Himalia and the star were observed in separate FOVs as they were still far apart. On the night of the event, March 3, the objects were observed with Perkin-Elmer telescope (Diameter = 1.6m; FOV = $5\farcm8$; pixel scale = $0\farcs17 / px$) at OPD just over an hour after the time scheduled for the event. Satellite and star were separated by about 16 arcsec, so very close to each other. From the calculated offsets, the map \ref{Fig: occ-Himalia-off03mar} was generated. Notice that the shadow path was not predicted to cross the OPD. This was not necessary for testing the prediction.
+Figure \ref{Fig: occ-Himalia}shows four zoomed in occultation maps corresponding to each of the four situations for Himalia.. The map \ref{Fig: occ-Himalia-nooff} is the nominal prediction with the coordinate of the star given by the catalogue and that of the satellite from the ephemeris. We then corrected the positions of the satellite by an offset calculated by the method showed in section \ref{Sec: Offset} to make the map \ref{Fig: occ-Himalia-ajuste}. The map \ref{Fig: occ-Himalia-off22fev} was made from obtained positions on February 22 observed with the Zeiss telescope (diameter = 0.6m; FOV = $12\farcm6$; pixel scale = $0\farcs37 / px$) at the Observatório do Pico dos Dias (OPD, IAU code 874, 45\degr 34\arcmin 57\arcsec W, 22\degr 32\arcmin 04\arcsec S, 1864m). On that day, Himalia and the star were observed in separate FOVs as they were still far apart. On the night of the event, March 3, the objects were observed with Perkin-Elmer telescope (diameter = 1.6m; FOV = $5\farcm8$; pixel scale = $0\farcs17 / px$) at OPD just over an hour after the time scheduled for the event. Satellite and star were separated by about 16 arcsec, so very close to each other. From the calculated offsets, the map \ref{Fig: occ-Himalia-off03mar} was generated. Notice that the shadow path was not predicted to cross the OPD. This was not necessary for testing the prediction.
 
 \begin{figure*}
 \begin{centering}
@@ -346,7 +346,7 @@ Figure \ref{Fig: occ-Himalia}shows four zoomed in occultation maps corresponding
 \end{centering}
 \end{figure*}
 
-In this event, it is possible to see that the shade does not vary by much among the four maps suggesting thatthere was a good probability of observing the event. In fact, the biggest differences between the shadows of the four maps were \textcolor{red}{22s} along the shadow path and \textcolor{red}{109km} in the direction perpendicular to the shadows (see table \ref{Tab: comparison-Himalia}).
+In this event, it is possible to see that the shade does not vary by much among the four maps suggesting that there was a good probability of observing the event. In fact, the largest differences between the shadows of the four maps were \textcolor{red}{22s} along the shadow path and \textcolor{red}{109km} in the direction perpendicular to the shadows (see table \ref{Tab: comparison-Himalia}).
 
 \begin{table}
 \caption{\label{Tab: comparison-Himalia} Comparison between the predictions of the Himalia occultation at March 03, 2015. \textcolor{red}{Waiting for the right offset}}
@@ -366,7 +366,7 @@ Mar. 03 Obs. & -10s & -19mas (61km)\tabularnewline
 
 \end{table}
 
-The second test was with the satellite Elara, which is the second largest irregular satellite of Jupiter. The event was predicted to occur at March 30, 2015. The observations were made on March 25 and April 2, 2015 with the Zeiss telescope. On the night of April 2 they could still be observed in the same FOV. Due to Elara being fainter than Himalia by 2 magnitudes, dispersions of the satellite positions on both nights ended up being higher than for Himalia. Still, the differences between the maps obtained were relatively small. The biggest differences between them were \textcolor{red}{74s} along the shadow path and \textcolor{red}{307km} perpendicular to it (see table \ref{Tab: comparison-Elara}).
+The second test was with the satellite Elara, which is the second largest irregular satellite of Jupiter. The event was predicted to occur at March 30, 2015. The observations were made on March 25 and April 2, 2015 with the Zeiss telescope. On the night of April 2 they could still be observed in the same FOV. Due to Elara being fainter than Himalia by 2 magnitudes, dispersions of the satellite positions on both nights ended up being higher than for Himalia. Still, the differences between the maps obtained were relatively small. The largest differences between them were \textcolor{red}{74s} along the shadow path and \textcolor{red}{307km} perpendicular to it (see table \ref{Tab: comparison-Elara}).
 
 \begin{table}
 \caption{\label{Tab: comparison-Elara} Comparison between the predictions of Elara occultation at March 30, 2015. \textcolor{red}{Waiting for the right offset}}
@@ -388,11 +388,11 @@ Apr. 02 Obs. & +15 s & -89mas (307km) \tabularnewline
 
 \section{Discussion} \label{Sec: conclusions}
 
-We presented stellar occultations for the period of 2015-2017 for seven irregular satellites of Jupiter: Ananke, Carme, Elara, Himalia, Lysithea, Pasiphae, and Sinope; one satellite of Saturn: Phoebe; and two satellites of Neptune: Triton and Nereid. The procedure used was the same that predicted stellar occultations by Pluto and its satellites in \cite{Assafin2010} and by Centaurs and TNOs in \cite{Assafin2012} and \cite{Camargo2014}.
+We presented stellar occultations for the period of 2015-2017 for seven irregular satellites of Jupiter: Ananke, Carme, Elara, Himalia, Lysithea, Pasiphae, and Sinope; one satellite of Saturn: Phoebe; and two satellites of Neptune: Triton and Nereid. The procedure used was the same as that for the prediction of stellar occultations by Pluto and its satellites in \cite{Assafin2010} and by Centaurs and TNOs in \cite{Assafin2012} and \cite{Camargo2014}.
 
 The candidate stars was searched in the UCAC4 catalogue, except for the candidates in 2015 and 2016 for Triton and Nereid. In this case, we used the WFI catalogue that was generated from observations made with ESO2p2/WFI CCD mosaic that covered the path of Neptune in the sky-plane up to 2016 (see Sec. \ref{Sec: predictions}).
 
-A total of \textcolor{red}{588} events were detected to happen between and the period presented. In table \ref{Tab: satellite-occultation} it's presented the number of stellar occultations predicted by year for each satellite.
+A total of \textcolor{red}{588} events were foreseen. In table \ref{Tab: satellite-occultation} we present the number of stellar occultations predicted by year for each satellite.
 
 \begin{table}
 \caption{\label{Tab: satellite-occultation} Number of stellar occultations for each satellite from 2015 up to 2017.}
@@ -420,11 +420,11 @@ Triton &  &  &  &  \tabularnewline
 Occultations predicted using the UCAC4 catalogue. For Nereid and Triton, the occultations in 2015 and 2016 were predicted using the WFI catalogue as explained in Sec. \ref{Sec: predictions} \textcolor{red}{Numbers of Triton yet to be written}.
 \end{table}
 
-Concerning the UCAC4 stars, an accuracy of about 20-50 mas in the star position would give a 15-40\% probability of observe such an event by Ananke, the smallest irregular satellite in the sample. For Himalia, the occultation would have 80-100\% probability of success. Combined with a mean accuracy in the position of 30 mas for Himalia and 100 mas for Ananke mas published in Table 2 of \cite{Jacobson2012}, the probability of success would be around 50-80\% for Himalia and $\approx$5\% for Ananke. Observations a few days before the date of occultation predicted may diminish the combined accuracy to 40-80 mas, depending on the magnitude of the objects.
+The probability of successfully observing an occultation is roughly the ratio of the satellite's diameter by the budget error of ephemeris and star position. Thus, UCAC4 errors ranging between 20 mas - 50 mas combined with a mean accuracy in the position of 30 mas for Himalia and 100 mas for Ananke mas published in Table 2 of \cite{Jacobson2012} would give 80\%-50\% probability of observing such an event by Himalia and $\approx$5\% for Ananke, the smallest irregular satellite in the sample. Observations a few days before the date of occultation predicted may improve the combined accuracy to 40-80 mas, depending on the magnitude of the objects.
 
-The tests made with an occultation expected to happen in March 03, 2015 for Himalia showed that this event could probably be observed in case there were observers available in the shadow area. Fig. \ref{Fig: occ-Himalia} shows the maps made for 4 different offset corrections as explained in Sec. \ref{Sec: testes}. Table \ref{Tab: comparison-Himalia} shows numerically the difference between the maps. A similar test was made for an occultation of Elara in March 30, 2015. The difference between the maps in this case can be seen summarized in Table \ref{Tab: comparison-Elara}.
+The tests made with an occultation expected to happen in March 03, 2015 for Himalia showed that this event could probably have been observed in case there were observers available in the shadow area. Fig. \ref{Fig: occ-Himalia} shows the maps made for 4 different offset corrections as explained in Sec. \ref{Sec: testes}. Table \ref{Tab: comparison-Himalia} shows numerically the difference between the maps. A similar test was made for an occultation of Elara in March 30, 2015. The difference between the maps in this case are listed in Table \ref{Tab: comparison-Elara}.
 
-Continuous observations of the satellites and candidates are recommended and new numerical integrations of the orbits of the satellites are expected to reduce the respective position errors. The GAIA catalogue, which are to be released in the end of 2016 will improve the position error of the stars and will allow for the detection of occultations candidates of fainter stars, which are not present in the UCAC4 catalogue. Consequently, the astrometry of the satellites with the GAIA catalogue will improve the position errors of the satellites that will allow for better predictions and a bigger probability of observe stellar occultations by irregular satellites.
+Continuous observations of the satellites and candidates are recommended and new numerical integrations of the orbits of the satellites are expected to reduce the respective position errors. The GAIA catalogue, which is to be released at the end of 2016 will improve the position error of the stars and will allow for the detection of occultations candidates of fainter stars, which are not present in the UCAC4 catalogue. Consequently, the astrometry of the satellites with the GAIA catalogue will improve the position errors allowing for better predictions and a higher probabilities of observing stellar occultations by irregular satellites.
 
 %We managed a large database with FITS images acquired by 5 telescopes in 3 sites between 1992 and 2014. From that, we identified 8466 observations of irregular satellites, from which we managed to obtain 6523 suitable astrometric positions, giving a total of 3666 positions for 12 satellites of Jupiter, 1920 positions for 4 satellites of Saturn, 35 positions for Sycorax (Uranus) and 902 positions for Nereid (Neptune).
 
