--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -274,7 +274,7 @@ Making a new model for the orbits of these objects would demand a lot of time an
 %\end{equation}
 %where $F(t,f)$ is the offset obtained, $t$ is time in years counting from J2000.0 and $f$ is the true anomaly. The patterns could be applied for right ascension as well as for declination ephemeris offsets.
 
-\textcolor{red}{...}
+\textcolor{red}{Here we write something about the numerical integration}
 
 
 
