--- a/relatorio_2015/Referencias.bib
+++ b/relatorio_2015/Referencias.bib
@@ -727,20 +727,30 @@ month={Jun},
 note={aceito}
 }
 
-@Article{DiasOliveira2015,
-author = {Dias-Oliveira, A. and Sicardy, B. and Lellouch, E. and others},
-title = {Pluto’s atmosphere from stellar occultations in 2012 and 2013},
-journal = {The Astrophysical Journal},
-note = {submetido},
-year = {2015},
+@article{DiasOliveira2015,
+title={\href{http://dx.doi.org/10.1088/0004-637X/811/1/53}{PLUTO’s ATMOSPHERE FROM STELLAR OCCULTATIONS IN 2012 AND 2013}},
+volume={811},
+url={http://dx.doi.org/10.1088/0004-637X/811/1/53},
+DOI={10.1088/0004-637x/811/1/53},
+number={1},
+journal={ApJ},
+publisher={IOP Publishing},
+author={Dias-Oliveira, A. and Sicardy, B. and Lellouch, E. and Vieira-Martins, R. and Assafin, M. and Camargo, J. I. B. and Braga-Ribas, F. and Gomes-Júnior, A. R. and Benedetti-Rossi, G. and Colas, F. and et al.},
+year={2015},
+month={Sep},
+pages={53}
 }
 
-@Article{Desmars2015,
-author = {Desmars, J. and Camargo, J.I.B. and Braga-Ribas, F. and others},
-title = {Orbit determination of trans-Neptunian objects and Centaurs for the prediction of stellar occultations},
-journal = {Astronomy and Astrophysics},
-note = {submetido},
-year = {2015},
+@article{Desmars2015,
+title={\href{http://dx.doi.org/10.1051/0004-6361/201526498}{Orbit determination of trans-Neptunian objects and Centaurs for the prediction of stellar occultations}},
+url={http://dx.doi.org/10.1051/0004-6361/201526498},
+DOI={10.1051/0004-6361/201526498},
+journal={Astronomy \& Astrophysics},
+publisher={EDP Sciences},
+author={Desmars, J. and Camargo, J.I.B. and Braga-Ribas, F. and Vieira-Martins, R. and Assafin, M. and Vachier, F. and Colas, F. and Ortiz, J. L. and Duffard, R. and Morales, N. and et al.},
+year={2015},
+month={Oct},
+notes={accepted}
 }
 
 @article{Nimmo2015,
@@ -769,12 +779,29 @@ month={May},
 pages={271–276}
 }
 
-@Article{Camargo2015,
-author = {Camargo, J.I.B. and Magalhães, F.P. and Vieira-Martins, R. and others},
-title = {Astrometry of the main satellites of Uranus: 18 years of observations},
-journal = {Astronomy and Astrophysics},
-note = {submetido},
-year = {2015},
+@article{Camargo2015,
+title={\href{http://dx.doi.org/10.1051/0004-6361/201526385}{Astrometry of the main satellites of Uranus: 18 years of observations}},
+volume={582},
+url={http://dx.doi.org/10.1051/0004-6361/201526385},
+DOI={10.1051/0004-6361/201526385},
+journal={Astronomy \& Astrophysics},
+publisher={EDP Sciences},
+author={Camargo, J. I. B. and Magalhães, F. P. and Vieira-Martins, R. and Assafin, M. and Braga-Ribas, F. and Dias-Oliveira, A. and Benedetti-Rossi, G. and Gomes-Júnior, A. R. and Andrei, A. H. and da Silva Neto, D. N.},
+year={2015},
+month={Sep},
+pages={A8}
 }
 
-@article{Stern2015, title={The Pluto system: Initial results from its exploration by New Horizons}, volume={350}, url={http://dx.doi.org/10.1126/science.aad1815}, DOI={10.1126/science.aad1815}, number={6258}, journal={Science}, publisher={American Association for the Advancement of Science (AAAS)}, author={Stern, S. A. and Bagenal, F. and Ennico, K. and Gladstone, G. R. and Grundy, W. M. and McKinnon, W. B. and Moore, J. M. and Olkin, C. B. and Spencer, J. R. and Weaver, H. A. and et al.}, year={2015}, month={Oct}, pages={aad1815–aad1815}}
+@article{Stern2015,
+title={\href{http://dx.doi.org/10.1126/science.aad1815}{The Pluto system: Initial results from its exploration by New Horizons}},
+volume={350},
+url={http://dx.doi.org/10.1126/science.aad1815},
+DOI={10.1126/science.aad1815},
+number={6258},
+journal={Science},
+publisher={American Association for the Advancement of Science (AAAS)},
+author={Stern, S. A. and Bagenal, F. and Ennico, K. and Gladstone, G. R. and Grundy, W. M. and McKinnon, W. B. and Moore, J. M. and Olkin, C. B. and Spencer, J. R. and Weaver, H. A. and et al.},
+year={2015},
+month={Oct},
+pages={aad1815–aad1815}
+}
