--- a/relatorio_2015/Referencias.bib
+++ b/relatorio_2015/Referencias.bib
@@ -717,14 +717,15 @@ journal = {Monthly Notices of the Royal Astronomical Society}
 
 @Article{GomesJunior2015-Irregular,
 title={\href{http://dx.doi.org/10.1051/0004-6361/201526273}{Astrometric positions for 18 irregular satellites of giant planets from 23 years of observations}},
+volume={580},
 url={http://dx.doi.org/10.1051/0004-6361/201526273},
 DOI={10.1051/0004-6361/201526273},
-journal={Astronomy and Astrophysics},
+journal={Astronomy \& Astrophysics},
 publisher={EDP Sciences},
-author={A. R. Gomes-Júnior and M. Assafin and R. Vieira-Martins and J.-E. Arlot and others},
+author={Gomes-Júnior, A. R. and Assafin, M. and Vieira-Martins, R. and Arlot, J.-E. and Camargo, J. I. B. and Braga-Ribas, F. and da Silva Neto, D. N. and Andrei, A. H. and Dias-Oliveira, A. and Morgado, B. E. and et al.},
 year={2015},
-month={Jun},
-note={aceito}
+month={Aug},
+pages={A76}
 }
 
 @article{DiasOliveira2015,
@@ -750,7 +751,7 @@ publisher={EDP Sciences},
 author={Desmars, J. and Camargo, J.I.B. and Braga-Ribas, F. and Vieira-Martins, R. and Assafin, M. and Vachier, F. and Colas, F. and Ortiz, J. L. and Duffard, R. and Morales, N. and et al.},
 year={2015},
 month={Oct},
-notes={accepted}
+note={accepted}
 }
 
 @article{Nimmo2015,
