--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -1,3 +1,14 @@
+@INPROCEEDINGS{Everhart1985,
+   author = {{Everhart}, E.},
+    title = "{An efficient integrator that uses Gauss-Radau spacings}",
+booktitle = {Dynamics of Comets: Their Origin and Evolution, Proceedings of IAU Colloq. 83, held in Rome, Italy, June 11-15, 1984.  Edited by Andrea Carusi and Giovanni B. Valsecchi.  Dordrecht: Reidel, Astrophysics and Space Science Library. Volume 115, 1985, p.185},
+     year = 1985,
+   editor = {{Carusi}, A. and {Valsecchi}, G.~B.},
+    pages = {185},
+   adsurl = {http://adsabs.harvard.edu/abs/1985dcto.proc..185E},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article{Thomas1991,
 title={Voyager observations of Nereid},
 volume={96},
@@ -107,6 +118,20 @@ author={Nesvorný, David and Beaugé, Cristian and Dones, Luke},
 year={2004},
 month={Mar},
 pages={1768–1783}
+}
+
+@ARTICLE{Lainey2004,
+   author = {{Lainey}, V. and {Duriez}, L. and {Vienne}, A.},
+    title = "{New accurate ephemerides for the Galilean satellites of Jupiter. I. Numerical integration of elaborated equations of motion}",
+  journal = {\aap},
+ keywords = {celestial mechanics, planets and satellites: individual: Jupiter, ephemerides},
+     year = 2004,
+    month = jun,
+   volume = 420,
+    pages = {1171-1183},
+      doi = {10.1051/0004-6361:20034565},
+   adsurl = {http://adsabs.harvard.edu/abs/2004A%26A...420.1171L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Gomes2005,
