--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -121,17 +121,17 @@ pages={1768–1783}
 }
 
 @ARTICLE{Lainey2004,
-   author = {{Lainey}, V. and {Duriez}, L. and {Vienne}, A.},
-    title = "{New accurate ephemerides for the Galilean satellites of Jupiter. I. Numerical integration of elaborated equations of motion}",
-  journal = {\aap},
- keywords = {celestial mechanics, planets and satellites: individual: Jupiter, ephemerides},
-     year = 2004,
-    month = jun,
-   volume = 420,
-    pages = {1171-1183},
-      doi = {10.1051/0004-6361:20034565},
-   adsurl = {http://adsabs.harvard.edu/abs/2004A%26A...420.1171L},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+title={New accurate ephemerides for the Galilean satellites of Jupiter},
+volume={420},
+url={http://dx.doi.org/10.1051/0004-6361:20034565},
+DOI={10.1051/0004-6361:20034565},
+number={3},
+journal={Astronomy and Astrophysics},
+publisher={EDP Sciences},
+author={Lainey, V. and Duriez, L. and Vienne, A.},
+year={2004},
+month={Jun},
+pages={1171–1183}
 }
 
 @article{Gomes2005,
