--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -292,8 +292,8 @@ Our model was fitted to the observations through a least-squares procedure. The 
 The initial osculating elements at the origin of integration are presented in Table \ref{Tab: sat_ell}, while the residuals are presented in Fig \ref{Fig: residuals} for Himalia and Carme.
 
 \begin{figure*}
-\subfigure{\includegraphics[width=8.8cm]{Laurene/residuals/Himalia_resid.eps}   \label{Fig: residuals-Himalia}}
-\subfigure{\includegraphics[width=8.8cm]{Laurene/residuals/Carme_resid.eps}  \label{Fig: residuals-Carme}}
+\subfigure{\includegraphics[width=8.8cm]{figures/Himalia_resid.eps}   \label{Fig: residuals-Himalia}}
+\subfigure{\includegraphics[width=8.8cm]{figures/Carme_resid.eps}  \label{Fig: residuals-Carme}}
 \caption{Residuals of Himalia and Carme \label{Fig: residuals}}
 \end{figure*}
 
@@ -404,29 +404,32 @@ Occultations predicted using the UCAC4 catalogue and STE ephemeris.
 \end{table}
 
 \begin{table*}
-\caption{\label{Tab: sample-cds} Stellar occultation sampled predictions for Himalia \textcolor{red}{I still have to fix the table}}
+\caption{\label{Tab: sample-cds} Stellar occultation sampled predictions for Pasiphae}
 \begin{centering}
-\begin{tabular}{l}
-\hline 
-%\multicolumn{9}{c}{Himalia} \tabularnewline
+\begin{tabular}{cccrcccrcrr}
+\hline
+\hline
+d m Year~~~~h~~m~~~s & RA~~~(ICRS)~~~Dec & C/A & P/A & $\nu$ & {\it D} & R* & $\lambda$ & LST & $\mu_{\alpha*}$ & $\mu_{\delta}$ \tabularnewline
 \hline
 % & \multicolumn{2}{c}{Mean errors} & Nr & Nr &  UCAC4       \tabularnewline
-
-
-
- 
- 
+09 04 2016 03:58:19. & 11 14 36.7707 +07 39 20.7610 & 1.003 &  17.9 & -12.88 &  4.54 & 14.9 & 271. & 22:03 &  12. & -33. \tabularnewline 
+13 06 2016 00:16:12. & 11 12 48.5020 +07 06 43.3520 & 0.661 &  30.0 & +14.32 &  5.50 & 13.9 & 262. & 17:45 &  -1. &   1. \tabularnewline 
+27 06 2016 13:56:09. & 11 18 03.4160 +06 23 45.1940 & 1.707 &  28.0 & +20.29 &  5.74 & 11.7 &  44. & 16:53 &   4. & -10. \tabularnewline 
+18 07 2016 15:07:24. & 11 28 15.5076 +05 05 31.8060 & 0.942 &  26.7 & +27.80 &  6.05 & 14.0 &   8. & 15:40 &   4. &   4. \tabularnewline 
+22 07 2016 16:15:07. & 11 30 30.4310 +04 48 43.4340 & 0.644 & 206.5 & +29.04 &  6.11 & 14.6 & 348. & 15:27 &  23. & -24. \tabularnewline 
+24 07 2016 01:37:34. & 11 31 17.8471 +04 42 49.0540 & 0.029 & 206.6 & +29.46 &  6.12 & 15.1 & 206. & 15:22 &   2. &  -8. \tabularnewline 
+24 07 2016 17:37:18. & 11 31 40.7472 +04 39 57.5060 & 0.840 &  26.5 & +29.66 &  6.13 & 14.9 & 326. & 15:20 & -11. &  -1. \tabularnewline 
 \hline
 \end{tabular}
 \par\end{centering}
-\textbf{Notes}. Entries included: day of the year and UTC time of the prediction; right ascension and declination of the occulted star - in the original table, these coordinates are immediately followed by the geocentric astrometric equatorial coordinates of the satellite (corrected the computed ephemeris offset derived in Sec. \ref{Sec: integration}); C/A: the geocentric closest approach, in arcseconds; P/A: the planet position angle with respect to the occulted star at C/A, in degrees; velocity in plane of sky, in km s$^{-1}$: positive = prograde, negative = retrograde; D: planet range to Earth, in AU; R*: normalized magnitude to a common shadow velocity of 20 km s$^{-1}$ by the relationship $\textrm{Mag}* = \textrm{Mag}_{\textrm{actual}} + 2.5 \times \log 10 \left(\frac{\textrm{velocity}} {20 \textrm{km}\, \textrm{s}^{-1}} \right)$. A value of 50.0 means that the star is not in the 2MASS; $\lambda$: east longitude of subplanet point in degrees, positive towards east; LST: UT + $\lambda$: local solar time at subplanet point, hh:mm; $\Delta e_{\alpha *}$ and $\Delta e_{\delta}$: computed offsets in mas applied to the ephemeris right ascension and declination, respectively; pm: ok = proper motion applied, no = no proper motion applied; catalogue cross-identification (ct) = uc (UCAC2), 2m (2MASS), fs (field star); $E_{\alpha *}$ and $E_{\delta}$: uncertainties (mas) in right ascension and declination. A value of 9999 means that there was no estimation of the respective uncertainty; $\mu_{\alpha *}$ and $\mu_{\delta}$: proper motions in right ascension and declination, respectively (mas/year).
+\textbf{Notes}. Entries included: day of the year and UTC time of the prediction; right ascension and declination of the occulted star - in the original table; C/A: the geocentric closest approach, in arcseconds; P/A: the planet position angle with respect to the occulted star at C/A, in degrees; $\nu$: velocity in plane of sky, in km s$^{-1}$: positive = prograde, negative = retrograde; {\it D}: planet range to Earth, in AU; R*: normalized magnitude to a common shadow velocity of 20 km s$^{-1}$ by the relationship $\textrm{R}* = \textrm{R}_{\textrm{actual}} + 2.5 \times \log 10 \left(\frac{\textrm{velocity}} {20 \textrm{km}\, \textrm{s}^{-1}} \right)$; $\lambda$: east longitude of subplanet point in degrees, positive towards east; LST: UT + $\lambda$: local solar time at subplanet point, hh:mm; $\mu_{\alpha *}$ and $\mu_{\delta}$: proper motions in right ascension and declination, respectively (mas/year).
 \label{Tab: occ-list}
 \end{table*}
 
 \begin{figure*}
 \begin{centering}
 \includegraphics[scale=0.4]{figures/Pasiphae_2016-04-09T03:58:19.png}   
-\caption{Occultation map for Himalia regarding to the fifth event sampled in Table \ref{Tab: occ-list}}
+\caption{Occultation map for Himalia regarding to the first event sampled in Table \ref{Tab: occ-list}}
 \label{Fig: ocultacao}
 \end{centering}
 \end{figure*}
@@ -505,7 +508,7 @@ Apr. 02 Obs. & s & mas (km) \tabularnewline
 
 We presented stellar occultations for the period of 2015-2017 for seven irregular satellites of Jupiter: Ananke, Carme, Elara, Himalia, Lysithea, Pasiphae, and Sinope; one satellite of Saturn: Phoebe; and two satellites of Neptune: Triton and Nereid. The procedure used was the same as that for the prediction of stellar occultations by Pluto and its satellites in \cite{Assafin2010} and by Centaurs and TNOs in \cite{Assafin2012} and \cite{Camargo2014}.
 
-The candidate stars was searched in the UCAC4 catalogue, except for the candidates in 2015 and 2016 for Triton and Nereid. In this case, we used the WFI catalogue that was generated from observations made with ESO2p2/WFI CCD mosaic that covered the path of Neptune in the sky-plane up to 2016 (see Sec. \ref{Sec: predictions}). From this, a total of \textcolor{red}{588} events were foreseen. 
+The candidate stars was searched in the UCAC4 catalogue, except for the candidates in 2015 and 2016 for Triton and Nereid. In this case, we used the WFI catalogue that was generated from observations made with ESO2p2/WFI CCD mosaic that covered the path of Neptune in the sky-plane up to 2016 (see Sec. \ref{Sec: predictions}). From this, a total of 687 events were foreseen. 
 
 The probability of successfully observing an occultation is roughly the ratio of the satellite's diameter by the budget error of ephemeris and star position. Thus, UCAC4 errors ranging between 20 mas - 50 mas combined with a mean accuracy in the position of 30 mas for Himalia and 100 mas for Ananke mas published in Table 2 of \cite{Jacobson2012} would give 80\%-50\% probability of observing such an event by Himalia and $\approx$5\% for Ananke, the smallest irregular satellite in the sample. Observations a few days before the date of occultation predicted may improve the combined accuracy to 40-80 mas, depending on the magnitude of the objects.
 
